# sqleval

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  mock_agent.py
config/: .env.example
datasets/: meta.txt  spec.md
datasets/example/: data.sql  questions.md  schema.sql
datasets/index_invalidation/: data.sql  questions.md  schema.sql
datasets/inefficient_join/: data.sql  questions.md  schema.sql
prompts/: agent.tpl  evaluation.tpl
reports/: evaluation_report.md
src/sqleval/: spec.md
