[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqleval"
version = "0.1.0"
description = "SQL调优Agent效果评估框架"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Wei Xiao", email = "weixiao@example.com"}
]
maintainers = [
    {name = "Wei Xiao", email = "weixiao@example.com"}
]
keywords = ["sql", "database", "optimization", "agent", "evaluation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Database Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "PyMySQL>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/sunzhaoyang/sqleval"
Repository = "https://github.com/sunzhaoyang/sqleval.git"
Issues = "https://github.com/sunzhaoyang/sqleval/issues"

# [project.scripts]
# sqleval = "sqleval.cli:main"

# [tool.setuptools.packages.find]
# where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
